testbed/test/cruise/compiler/expected/No_Modifier_Method.txt
No_Modifier_Method.ump:6: error: incompatible types: double cannot be converted to String
    String s = 1.0;
               ^
1 error